Fix overflow on body, remove useless tags

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -185,8 +185,10 @@
 
 html {
   min-height: 100%;
-  min-width: 100%;
-  position: relative;
+}
+
+html.nav-visible {
+  overflow-x: hidden;
 }
 
 .navtacular-menu {
